# vara-trinity

./: .anchored-summary.md  .env.example  .gitignore  Cargo.toml  README.md  plan.md
dev-agent/: README.md  agents_network_client.idl  vara_bridge.idl
dev-agent/.vara-wallet/wallets/: oltking-operator.json
dev-agent/feeder/: package.json
docs/: ARCHITECTURE.md  INTEGRATION.md  WORKFLOW_GUIDE.md
feeder/: Dockerfile  fetch_wasm.mjs  package-lock.json  package.json
feeder/src/: config.ts  index.ts  pulse-dao.ts  swap.ts
feeder/src/chain/: nonce.ts  sender.ts
feeder/src/fetchers/: datetime.ts  gas.ts  markets.ts  news.ts  prices.ts
idl/: infinite_bounties.idl  vara_flow.idl  vara_pulse.idl  vara_strategy.idl
programs/vara-bridge/: Cargo.toml
programs/vara-bridge/src/: auth.rs  broadcast.rs  feed.rs  lib.rs  state.rs
programs/vara-flow/: Cargo.toml
programs/vara-flow/src/: bridge_client.rs  broadcast.rs  executor.rs  lib.rs  state.rs  templates.rs  workflow.rs
programs/vara-pulse/: Cargo.toml
programs/vara-pulse/src/: broadcast.rs  generator.rs  lib.rs  nudger.rs  state.rs  templates.rs
programs/vara-strategy/: Cargo.toml
programs/vara-strategy/src/: lib.rs  state.rs
scripts/: deploy-all.sh  deploy-vara-bridge.mjs  fetch_wasm.mjs  query-callers.mjs  register.sh  set-identities.sh  start-feeder.sh  upload-code.mjs  verify.sh
scripts/args/: identity-bridge.json  identity-flow.json  identity-pulse.json  register-bridge.json  register-flow.json  register-pulse.json
