[package]
name = "vara-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sails-rs = { workspace = true }
gstd = "1.10.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }
gear-wasm-builder = "=1.10.0"
