[package]
name = "vara-pulse"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gstd = "1.10.0"
sails-rs = "0.10.3"
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[build-dependencies]
gear-wasm-builder = "1.10.0"
